dependencies/charon/charon/tests/ui/gat-causes-unhandled-ty-clause.out
error: Generic associated types are not supported
 --> tests/ui/gat-causes-unhandled-ty-clause.rs:4:5
  |
4 |     type GAT<T>;
  |     ^^^^^^^^^^^

error: Item `test_crate::HasGAT` caused errors; ignoring.
 --> tests/ui/gat-causes-unhandled-ty-clause.rs:3:1
  |
3 | trait HasGAT {
  | ^^^^^^^^^^^^

error: Found unhandled item clause; this is a bug unless the clause is coming from a GAT.
  --> tests/ui/gat-causes-unhandled-ty-clause.rs:12:1
   |
12 | / fn floatify<C>() -> <C::Friend as HasAssoc>::Assoc
13 | | where
14 | |     C: HasGAT,
...  |
17 | | }
   | |_^

error: Found unhandled item clause; this is a bug unless the clause is coming from a GAT.
  --> tests/ui/gat-causes-unhandled-ty-clause.rs:12:1
   |
12 | / fn floatify<C>() -> <C::Friend as HasAssoc>::Assoc
13 | | where
14 | |     C: HasGAT,
...  |
17 | | }
   | |_^

ERROR Charon failed to translate this code (4 errors)
